# boilerplate-c-autotools

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  configure.ac
contrib/: vimrc
doc/: Makefile.am
src/: Makefile.am  main.c
test/: Makefile.am
