#######################################
# The list of libraries we are building seperated by spaces.
# The 'lib_' indicates that these build products will be installed
# in the $(libdir) directory. For example /usr/lib
bin_PROGRAMS = woof

#######################################
# Build information for each binary

# Sources for snoopy
woof_SOURCES = \
		 main.c 

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
woof_CFLAGS = -I$(top_srcdir)/include 

